examples/failing/Arrays.purs
module Arrays where

  test = \arr -> arr !! (0 !! 0)
